--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
 <body>
     <section class="main">
-        <h1>Tarot Finder</h1>
-        <input type="text" placeholder="Enter a card: ">
-        <button id="tarot-search">Search Tarot</button>
+        <section class="header">
+            <h1>Tarot Finder</h1>
+        </section>
+        <section class="input">
+            <input type="text" placeholder="Enter a card: ">
+            <button id="tarot-search">Search Tarot</button>
+        </section>
+
         <h3 id="name"></h3>
         <h3 class="desc-head"></h3>
         <p id="description"></p>
